--- a/package.json
+++ b/package.json
@@ -1,20 +1,17 @@
 {
   "name": "openchat-bot",
   "version": "1.0.0",
-  "description": "React chatbot using OpenChat 3.5",
-  "main": "index.js",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
     "build": "vite build",
-    "dev": "vite"
+    "preview": "vite preview"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-  "vite": "^4.5.0",
-  "@vitejs/plugin-react": "^4.0.0"
-}
-
+    "vite": "^4.5.0",
+    "@vitejs/plugin-react": "^4.0.0"
+  }
 }
